tests/agl/rejections/lex/bad_dedent.agl
if true =>
    print "a"
  print "b"
